# Master_Thesis

./: README.md
Gazebo/plugins/my_proto_knee_ISMPC/: CMakeLists.txt  control_plugin.cc
Gazebo/plugins/my_proto_knee_ISMPC/include/: QPSolverInterface.cpp
Gazebo/plugins/my_proto_knee_Task_Tracker/: CMakeLists.txt  build_and_compile_plugin.sh  proto_controller.cc
Gazebo/plugins/my_proto_knee_Task_Tracker/include/: README.md
Gazebo/plugins/my_proto_knee_Task_Tracker/include/Matlab_generated/A_feas_calc/: ModelController.cpp  ModelController.h
Gazebo/plugins/my_proto_knee_Task_Tracker/include/Matlab_generated/A_lambda_dyn_calc/: ModelController.cpp  ModelController.h
Gazebo/plugins/my_proto_knee_Task_Tracker/include/Matlab_generated/A_state_lim_calc/: ModelController.cpp  ModelController.h
Gazebo/plugins/my_proto_knee_Task_Tracker/include/Matlab_generated/A_u_check_calc/: ModelController.cpp  ModelController.h
Gazebo/plugins/my_proto_knee_Task_Tracker/include/Matlab_generated/A_u_lim_calc/: ModelController.cpp  ModelController.h
Gazebo/plugins/my_proto_knee_Task_Tracker/include/Matlab_generated/B_check_inv_calc/: ModelController.cpp  ModelController.h
Gazebo/plugins/my_proto_knee_Task_Tracker/include/Matlab_generated/H_rel_CoM_calc/: ModelController.cpp  ModelController.h
Gazebo/plugins/my_proto_knee_Task_Tracker/include/Matlab_generated/J_CoMv_dot_tot_rel_wheel_calc/: ModelController.cpp  ModelController.h
Gazebo/plugins/my_proto_knee_Task_Tracker/include/Matlab_generated/J_CoMv_tot_rel_wheel_calc/: ModelController.cpp  ModelController.h
(+61 files in other folders)
